// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render a list of rules 1`] = `
<DocumentFragment>
  <div
    class="buttons"
  >
    <div>
      <button
        type="button"
      >
        su-plus
      </button>
      <button
        disabled=""
        type="button"
      >
        su-trash-alt
      </button>
    </div>
  </div>
  <table>
    <thead>
      <tr>
        <th>
          sulu_admin.title
        </th>
        <th>
          sulu_audience_targeting.assigned_at
        </th>
        <th>
          sulu_audience_targeting.conditions
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Rule 1
        </td>
        <td>
          sulu_audience_targeting.each_page_visit
        </td>
        <td>
          Browser
        </td>
      </tr>
      <tr>
        <td>
          Rule 2
        </td>
        <td>
          sulu_audience_targeting.each_session
        </td>
        <td>
          Browser & Query String
        </td>
      </tr>
      <tr>
        <td>
          Rule 3
        </td>
        <td>
          sulu_audience_targeting.first_visit
        </td>
        <td />
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Render an empty list of rules 1`] = `
<DocumentFragment>
  <div
    class="buttons"
  >
    <div>
      <button
        type="button"
      >
        su-plus
      </button>
      <button
        disabled=""
        type="button"
      >
        su-trash-alt
      </button>
    </div>
  </div>
  <table>
    <thead>
      <tr>
        <th>
          sulu_admin.title
        </th>
        <th>
          sulu_audience_targeting.assigned_at
        </th>
        <th>
          sulu_audience_targeting.conditions
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
</DocumentFragment>
`;
